 generator client {
  provider = "prisma-client-js"
 }

 generator dbml {
   provider = "prisma-dbml-generator"
 }

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                 Int         @id @default(autoincrement())
  createdAt          DateTime    @default(now()) @map(name: "created_at")
  updatedAt          DateTime    @updatedAt @map(name: "updated_at")
  name               String?
  email              String?     @unique
  emailVerified      DateTime?   @map(name: "email_verified")
  image              String?
  projects           Project[]
  likes              Like[]
  comments           Comment[]

  @@map(name: "users")
}

model Project {
  id                 Int         @id @default(autoincrement())
  title              String
  content            String?
  private            Boolean     @default(false)
  likes              Like[]
  comments           Comment[]
  // ==== Realtions field
  authorId           Int?
  author             User?       @relation(fields: [authorId], references: [id])
}

model Like {
  id                 Int         @id @default(autoincrement())
  // ==== Realtions field
  projectId          Int?
  project            Project?    @relation(fields: [projectId], references: [id])

  authorId           Int?
  author             User?       @relation(fields: [authorId], references: [id])
}


model Comment {
  id                 Int         @id @default(autoincrement())
  text               String
  // ==== Realtions field
  projectId          Int?
  project            Project?    @relation(fields: [projectId], references: [id])

  authorId           Int?
  author             User?       @relation(fields: [authorId], references: [id])
}

model Account {
  id                 Int       @default(autoincrement()) @id
  compoundId         String    @unique @map(name: "compound_id")
  userId             Int       @map(name: "user_id")
  providerType       String    @map(name: "provider_type")
  providerId         String    @map(name: "provider_id")
  providerAccountId  String    @map(name: "provider_account_id")
  refreshToken       String?   @map(name: "refresh_token")
  accessToken        String?   @map(name: "access_token")
  accessTokenExpires DateTime? @map(name: "access_token_expires")
  createdAt          DateTime  @default(now()) @map(name: "created_at")
  updatedAt          DateTime  @default(now()) @map(name: "updated_at")

  @@index([providerAccountId], name: "providerAccountId")
  @@index([providerId], name: "providerId")
  @@index([userId], name: "userId")

  @@map(name: "accounts")
}

model Session {
  id                 Int      @default(autoincrement()) @id
  userId             Int      @map(name: "user_id")
  expires            DateTime
  sessionToken       String   @unique @map(name: "session_token")
  accessToken        String   @unique @map(name: "access_token")
  createdAt          DateTime @default(now()) @map(name: "created_at")
  updatedAt          DateTime @default(now()) @map(name: "updated_at")

  @@map(name: "sessions")
}
