//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  projects Project [not null]
  likes Like [not null]
  comments Comment [not null]
}

Table Project {
  id Int [pk, increment]
  title String [not null]
  content String
  private Boolean [not null, default: false]
  likes Like [not null]
  comments Comment [not null]
  authorId Int
  author User
}

Table Like {
  id Int [pk, increment]
  projectId Int
  project Project
  authorId Int
  author User
}

Table Comment {
  id Int [pk, increment]
  text String [not null]
  projectId Int
  project Project
  authorId Int
  author User
}

Table Account {
  id Int [pk, increment]
  compoundId String [unique, not null]
  userId Int [not null]
  providerType String [not null]
  providerId String [not null]
  providerAccountId String [not null]
  refreshToken String
  accessToken String
  accessTokenExpires DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Session {
  id Int [pk, increment]
  userId Int [not null]
  expires DateTime [not null]
  sessionToken String [unique, not null]
  accessToken String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Ref: Project.authorId > User.id

Ref: Like.projectId > Project.id

Ref: Like.authorId > User.id

Ref: Comment.projectId > Project.id

Ref: Comment.authorId > User.id